T-9028 styles_ie7.css: Fix for mis-aligned tabs in IE7
Reviewed-on: https://review.totaralms.com/674
Tested-by: Totara Hudson <totara-hudson@catalyst.net.nz>

--- a/theme/totara/styles_ie7.css
+++ b/theme/totara/styles_ie7.css
@@ -22,7 +22,12 @@ button,
     line-height: 2.9em;
 }
 .tabrow0 div, .tabrow0 ul {
-    top: 3.3em;
+  top: 4.5em;
+}
+.tabrow0 li a.nolink,
+.tabrow0 li a.nolink:hover,
+.tabrow0 li a.nolink:visited {
+    padding-bottom:0px;
 }
 .tabrow0 a:link,
 .tabrow0 a:visited,
